--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-fastapi
-uvicorn
-fastapi-users[sqlalchemy]
-sqlalchemy
-email-validator
+databases==0.9.0
+fastapi==0.116.1
+fastapi_mail==1.5.0
+fastapi_users==14.0.1
+fastapi_users_db_sqlalchemy==7.0.0
+httpx==0.28.1
+mercadopago==2.3.0
+pydantic==1.10.22
+python-dotenv==1.1.1
+SQLAlchemy==2.0.42
+uvicorn==0.22.0
