--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 databases==0.9.0
 fastapi==0.116.1
-fastapi_mail==1.5.0
+fastapi_mail==1.3.1
 fastapi_users==14.0.1
 fastapi_users_db_sqlalchemy==7.0.0
 httpx==0.28.1
@@ -9,3 +9,5 @@ pydantic==1.10.22
 python-dotenv==1.1.1
 SQLAlchemy==2.0.42
 uvicorn==0.22.0
+asyncpg==0.30.0
+psycopg2==2.9.10
