--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ SQLAlchemy==2.0.42
 uvicorn==0.22.0
 asyncpg==0.30.0
 psycopg2==2.9.10
+google-api-python-client==2.95.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.1.0
